retrieveUnpackaged/objects/Submission_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Submission Topics</relationshipLabel>
        <relationshipName>Submission_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <formula>Topic__r.Topic_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Submission Topics</relationshipLabel>
        <relationshipName>Submission_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Submission Topic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>